# xls-playground

./: .gitignore  README.md
private/private-3-2/: README.md  docker-compose.yml
private/private-4-3-1/: .gitignore  README.md  dc.peers.yml  dc.validators.yml  report.py  requirements.txt  start_peers.sh  start_validators.sh  stop_peers.sh  stop_validators.sh
py/: README.md  basedir.py  playground.py  pyproject.toml  test.py  testing_config.py  xls35.py  xlsHooks.py
py/models/: account.py  cbdc.py  init.py  token.py  utils.py
py/models/nftoken/: burn.py  mint.py  offer.py  test.json
py/models/payment/: __init__.py  pathfinding.py
py/tests/: test_xls_34.py  test_xls_35.py  test_xls_38.py  test_xls_hooks.py  test_xls_network_id.py
py/tests/integration/: test_xls_hooks.py
py/xls_playground/: xls34.py  xlsNetworkID.py
py/xls_playground/models/: multisign.py
py/xls_playground/models/hooks/: __init__.py
py/xls_playground/models/multisign/: __init__.py
py/xls_playground/models/nftoken/: __init__.py  utils.py
py/xls_playground/models/payment/: channel.py
py/xls_playground/models/uritoken/: __init__.py
py/xls_playground/tools/: __init__.py
ts/: .gitignore  README.md  hookonByTT.json  hookonMap.json  jest.config.js  package.json  tsconfig.json
ts/src/: index.ts  xlsHooks.ts
ts/test/: 35.test.ts  hooks.test.ts  networkID.test.ts  tools.test.ts
xchain/: README.md  docker-compose.yml  entrypoint  rippled.dockerfile  witnessd.dockerfile
xchain/config/: bridge_bootstrap.json
xrpld/: README.md  docker-compose.yml  standalone.sh
(+37 files in other folders)
